# rviz_gaussian_distribution

./: .gitignore  LICENSE  README.md
rviz_gaussian_distribution/: CMakeLists.txt  package.xml  requirements.txt
rviz_gaussian_distribution/data/: W_list.csv  mu.csv  phi.csv  sig.csv
rviz_gaussian_distribution/examples/: example.launch  example.py  example_based_on_dataset.py  layout.rviz
rviz_gaussian_distribution/examples/modules/: dataset.py
rviz_gaussian_distribution/launch/: server.launch
rviz_gaussian_distribution/scripts/: main.py
rviz_gaussian_distribution/scripts/modules/distributions/: __init__.py  animated_distribution_manager.py  distribution_manager.py
rviz_gaussian_distribution/scripts/modules/distributions/modules/: __init__.py  animated_distribution.py  distribution.py
rviz_gaussian_distribution/scripts/modules/pointcloud2/: __init__.py  pointcloud2_encoder.py
rviz_gaussian_distribution_msgs/: CMakeLists.txt  package.xml
rviz_gaussian_distribution_msgs/action/: Add.action  Clear.action  Remove.action
rviz_gaussian_distribution_msgs/msg/: GaussianDistribution.msg
